--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ endif()
 if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU|Clang|AppleClang")
     set(COMMON_FLAGS "-Wall -Wextra -Wno-error \
             -Wno-macro-redefined \
+            -Wno-inconsistent-missing-override \
             -Wno-return-type \
             -Wno-unused-parameter \
             -Wno-unused-function \
@@ -180,6 +181,9 @@ else()
     set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g -DNDEBUG ${COMMON_CXX_FLAGS}")
 endif()
 
+# Toggle for GLES (Required for many ARM/Mobile platforms)
+option(USE_OPENGLES "Use OpenGLES instead of Desktop OpenGL" OFF)
+
 # Set game compilation version
 set(VERSION us)
 set(USE_NETWORKING OFF)
@@ -191,6 +195,7 @@ set(GFX_DEBUG_DISASSEMBLER OFF)
 # Add compile definitions for the target
 add_compile_definitions(
     VERSION_US=1
+    $<$<BOOL:${USE_OPENGLES}>:USE_OPENGLES>
     ENABLE_RUMBLE=1
     F3DEX_GBI=1
     _LANGUAGE_C
@@ -202,10 +207,6 @@ add_compile_definitions(
 	SPAGHETTI_VERSION="${PROJECT_VERSION}"
 )
 
-# Find necessary libraries
-if (UNIX AND NOT APPLE)
-find_package(OpenGL REQUIRED)
-endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
     configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/properties.h.in ${CMAKE_CURRENT_SOURCE_DIR}/properties.h @ONLY)
@@ -315,6 +316,25 @@ else()
     add_executable(${PROJECT_NAME} ${ALL_FILES})
 endif()
 
+################################################################################
+# OpenGL / OpenGLES library
+################################################################################
+if (UNIX AND NOT APPLE)
+    if (USE_OPENGLES)
+        find_library(GLESv2_LIBRARY GLESv2 REQUIRED)
+
+        target_link_libraries(${PROJECT_NAME} PRIVATE
+            ${GLESv2_LIBRARY}
+        )
+
+        target_compile_definitions(${PROJECT_NAME} PRIVATE
+            USE_OPENGLES=1
+        )
+    else()
+        find_package(OpenGL REQUIRED)
+        target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL::GL)
+    endif()
+endif()
 
 ################################################################################
 # MSVC runtime library
@@ -398,9 +418,12 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/libultraship/include
   ${CMAKE_CURRENT_SOURCE_DIR}/libultraship/include/libultraship
   ${SDL2_INCLUDE_DIRS}
-  ${GLEW_INCLUDE_DIRS}
   ${dr_libs_SOURCE_DIR}
 )
+
+if (NOT USE_OPENGLES)
+    include_directories(${GLEW_INCLUDE_DIRS})
+endif()
 
 add_subdirectory(libultraship ${CMAKE_CURRENT_SOURCE_DIR}/libultraship)
 add_dependencies(${PROJECT_NAME} libultraship)
